--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,25 @@ p {
 .dark #switchButton .fa-moon {
   display: none;
 }
+/*! ===== Neo header ===== */
+.fixed-top {
+  transition: all 0.4s ease 0s;
+  position: fixed;
+  z-index: 1030;
+  right: 0;
+  left: 0;
+  top: 50px;
+  background-color: #fff;
+}
+.nav-fixed {
+  top: 0;
+  padding: 0px;
+  background-color: #fff;
+  height: 100px;
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.05);
+  border-bottom: none;
+  z-index: 999 !important;
+}
 /*! ==================== switch light/dark */
 
 /* ---------------------------- hover */
